Simulation data getter implemented & tested, Alembic and OpenApi with Simulation endpoints
