# backend/api/schemas/__init__.py
@@ -20,3 +20,4 @@ from .trend_writer import ProfilerDataBase, ProfilerGeneralData, ProfilerDataOut
 from .simulation_def import SimulationDefBase
 from .simulation import SimulationBase, UpdateSimulation
 from .simulation_param import SimulationParamBase, SimulationParamOut, UpdateSimulationParam, SimulationParamIn
+from .simulation_data import SimulationDataBase, SimulationDataOut
